--- a/aboutService.html
+++ b/aboutService.html
@@ -194,7 +194,7 @@
     <a href="./About.html">About</a>
     <a href="./ourService.html">Services</a>
     <a href="./gallery1.html">Gallery</a>
-    <a href="./contact.html">Contact</a>
+    <a href="./contactNew.html">Contact</a>
      <a href="./product2.html">Product</a>
      <a href="./product.html">Market</a>
      
@@ -356,3 +356,4 @@
 
 </body>
 </html>
+
