--- a/contactNEW.html
+++ b/contactNEW.html
@@ -152,7 +152,7 @@
     <a href="./About.html">About</a>
     <a href="./ourService.html">Services</a>
     <a href="./gallery1.html">Gallery</a>
-    <a href="./contact.html">Contact</a>
+    <a href="./contactNEW.html">Contact</a>
      <a href="./product2.html">Product</a>
      <a href="./product.html">Market</a>
      
@@ -309,3 +309,4 @@
   </script>
 </body>
 </html>
+
