--- a/aboutService.html
+++ b/aboutService.html
@@ -191,7 +191,7 @@
     <p>Where elegance meets perfection ✨</p>
     <nav>
        <a href="./landingpage.html">Home</a>
-    <a href="./About.html">About</a>
+    <a href="./aboutService.html">About</a>
     <a href="./ourService.html">Services</a>
     <a href="./gallery1.html">Gallery</a>
     <a href="./contactNEW.html">Contact</a>
@@ -356,6 +356,7 @@
 
 </body>
 </html>
+
 
 
 
