--- a/aboutService.html
+++ b/aboutService.html
@@ -190,9 +190,9 @@
     <h1>Ochival Signature Beauty</h1>
     <p>Where elegance meets perfection ✨</p>
     <nav>
-       <a href="./landingpage.html">Home</a>
+       <a href="./index.html">Home</a>
     <a href="./aboutService.html">About</a>
-    <a href="./ourService.html">Services</a>
+    <a href="./Service.html">Services</a>
     <a href="./gallery1.html">Gallery</a>
     <a href="./contactNEW.html">Contact</a>
      <a href="./product2.html">Product</a>
@@ -356,6 +356,7 @@
 
 </body>
 </html>
+
 
 
 
