--- a/contactNEW.html
+++ b/contactNEW.html
@@ -148,9 +148,9 @@
   <header>
     <div class="brand">Ochiva Signature Beauty</div>
     <nav>
-      <a href="./landingpage.html">Home</a>
-    <a href="./About.html">About</a>
-    <a href="./ourService.html">Services</a>
+      <a href="./index.html">Home</a>
+    <a href="./aboutService.html">About</a>
+    <a href="./Service.html">Services</a>
     <a href="./gallery1.html">Gallery</a>
     <a href="./contactNEW.html">Contact</a>
      <a href="./product2.html">Product</a>
@@ -309,4 +309,5 @@
   </script>
 </body>
 </html>
+
 
