--- a/contactNEW.html
+++ b/contactNEW.html
@@ -150,7 +150,7 @@
     <nav>
       <a href="./index.html">Home</a>
     <a href="./aboutService.html">About</a>
-    <a href="./Service.html">Services</a>
+    <a href="./service.html">Services</a>
     <a href="./gallery1.html">Gallery</a>
     <a href="./contactNEW.html">Contact</a>
      <a href="./product2.html">Product</a>
@@ -309,5 +309,6 @@
   </script>
 </body>
 </html>
+
 
 
