--- a/gallery1.html
+++ b/gallery1.html
@@ -95,8 +95,8 @@
   <section class="gallery">
     <h2>Our Beautiful Works</h2>
     <div class="grid" >
-      <a href="#img1"><img src="./image/IMG_2541.JPG" alt="Wig 1"></a>
-      <a href="#img2"><img src="./image/IMG_2541.JPG" alt="Wig 2"></a>
+      <a href="#img1"><img src="./IMG_2541.JPG" alt="Wig 1"></a>
+      <a href="#img2"><img src="./IMG_2541.JPG" alt="Wig 2"></a>
       <a href="#img3"><img src="https://via.placeholder.com/500x500?text=Wig+3" alt="Wig 3"></a>
       <a href="#img4"><img src="https://via.placeholder.com/500x500?text=Wig+4" alt="Wig 4"></a>
       <a href="#img5"><img src="https://via.placeholder.com/500x500?text=Wig+5" alt="Wig 5"></a>
@@ -152,3 +152,4 @@
 
 </body>
 </html>
+
