--- a/gallery1.html
+++ b/gallery1.html
@@ -107,11 +107,11 @@
   <!-- Lightbox Popups -->
   <div id="img1" class="lightbox">
     <a href="#" class="close">&times;</a>
-    <img src="./image/IMG_2541.JPG">
+    <img src="./IMG_2541.JPG">
   </div>
   <div id="img2" class="lightbox">
     <a href="#" class="close">&times;</a>
-    <img src="https://via.placeholder.com/800x800?text=Wig+2">
+    <img src="./IMG_2541.JPG">
   </div>
   <div id="img3" class="lightbox">
     <a href="#" class="close">&times;</a>
@@ -152,4 +152,5 @@
 
 </body>
 </html>
+
 
